--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Click==7.0
-Flask==1.1.1
-Flask-WTF==0.14.2
-gunicorn==19.9.0
+click==7.1.2
+Flask==1.1.2
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-SQLAlchemy==1.3.8
-Werkzeug==0.15.5
-WTForms==2.2.1
+SQLAlchemy==1.3.20
+Werkzeug==1.0.1
+WTForms==2.3.3
